--- a/assets/style.css
+++ b/assets/style.css
@@ -3,19 +3,39 @@
 }
 
 #main_area {
-
+background-color: white;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+display: flex;
+flex-wrap: wrap;
+width: 50%;
 position: relative;
-left: 450px;
-top: 150px;
-
+left: 350px;
+ margin: 10px;
 }
 
-{
-    
+body{
+background-color: rgb(115, 203, 255);
 }
-.selectors {
 
-    position: relative;
-    left: 550px;
-    top: 225px;
+#choice1, #choice2, #choice3, #choice4 {
+
+    margin: 10px;
+    /* padding size. Padding-left and padding-right stretch it out */
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
+#start, #next {
+    margin: 10px;
+    /* padding size. Padding-left and padding-right stretch it out */
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+
+  
